src/objects/runSheetLineItem__c.object
<CustomObject>
    <fields>
        <fullName>acknowledged__c</fullName>
        <description>Acknowledged Date</description>
        <label>Acknowledged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>book__c</fullName>
        <label>Book</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booktype__c</fullName>
        <label>Booktype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>countyState__c</fullName>
        <label>County/State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>essences__c</fullName>
        <label>Essences</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>filed__c</fullName>
        <description>Instrument Filed Date</description>
        <label>Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>flags__c</fullName>
        <label>Flags</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>grantee__c</fullName>
        <label>Grantee</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>grantor__c</fullName>
        <label>Grantor</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>instDate__c</fullName>
        <description>Instrument Date</description>
        <label>Inst. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>instNo__c</fullName>
        <label>Inst.No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jobId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Title Integration Job</label>
        <referenceTo>TitleIntegrationJob__c</referenceTo>
        <relationshipLabel>Run Sheet Line Items</relationshipLabel>
        <relationshipName>runSheetLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>page__c</fullName>
        <label>Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recorded__c</fullName>
        <description>Recorded Date</description>
        <label>Recorded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>requirements__c</fullName>
        <label>Requirements</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>restrictions__c</fullName>
        <label>Restrictions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subtype__c</fullName>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warnings__c</fullName>
        <label>Warnings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Run Sheet Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RSLI-{0000000000}</displayFormat>
        <label>Run Sheet Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Run Sheet Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>